# BUT_COMPILER_2021

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeLists.txt.orig  README.md  run_tests.sh  start.sh  zdenek4_cg.tl
documentation/: FSM  Makefile  Presentation.pptx  andrei.tex  dokumentace.tex  obhajoba.c  obhajoba.md  obhajoba_Andrei.cpp  obhajoba_Andrei_SK.c  obhajoba_richard.c
documentation/src/: Lexikálna analýza.drawio  PSA.drawio  gen code.drawio  spolu.drawio  syntaktická analýza.drawio  tabuľka symbolov.drawio
scanner_tests/: scannerTests.cpp
semantic_errors/: andrei11_6.tl  andrei17_6.tl  andrei20_6.tl  andrei28_3.tl  andrei29_6.tl  andrei30_6.tl  andrei9_6.tl  gajdosik1_3.tl  gajdosik2_3.tl  gajdosik3_3.tl  gajdosik4_3.tl  gajdosik5_3.tl  gajdosik6_3.tl  zdenek6_cg.tl  zdenek7_cg.tl
src/: code_generator.c  code_generator.h  compiler.c  debug.h  error.h  expressions.c  expressions.h  parser.c  parser.h  queue.c  queue.h  scaner.c  scaner.h  scanner.c  scanner.h  str.c  str.h  symstack.c  symstack.h  symtable.c  symtable.h
syntax_errors/: andrei10_2.tl  andrei11_2.tl  andrei13_2.tl  andrei14_2.tl  andrei15_2.tl  andrei16_2.tl  andrei17_2.tl  andrei18_2.tl  andrei19_2.tl  andrei1_2.tl  andrei20_2.tl  andrei21_2.tl  andrei22_2.tl  andrei23_2.tl  andrei24_2.tl  andrei25_2.tl  andrei26_2.tl  andrei27_2.tl  andrei28_2.tl  andrei29_2.tl  andrei30_2.tl  andrei32_2.tl  andrei34_2.tl  andrei36_2.tl  andrei3_2.tl  andrei4_2.tl  andrei5_2.tl  andrei6_2.tl  andrei7_2.tl  andrei8_2.tl  andrei9_2.tl
tests/: returnCodesTests.cpp  scannerTests.cpp
tests_code_gen/: andrej0_cg.tl  andrej1_cg.tl  zdenek10_cg.tl  zdenek1_cg.ifjcode  zdenek2_cg.tl  zdenek3_cg.tl  zdenek4_cg.tl  zdenek6_cg.tl  zdenek7_cg.tl
without_errors/: andrei0_0.lua  andrei0_0.tl  andrei0_cg.lua  andrei0_new_gen_0.lua  andrei1_0.lua  andrei1_0.tl  andrei1_new_gen_0.lua  andrei1_new_gen_0.tl  andrei1_write.tl  andrei2_0.lua  andrei2_new_gen_0.lua  andrei2_write.lua  andrei2_write.tl  andrei3_write.tl  andrei4_new_gen_0.lua  andrei4_write.tl  andrei5_write.lua  andrei5_write.tl  andrei6_write.lua  andrei7_write.lua  andrei7_write.tl  andrei_gen0_0.lua  andrei_gen2_0.lua  andrei_nil0_0.lua  andrei_nil0_0.tl  andrei_nil1_0.lua  andrei_nil1_0.tl  andrei_nil2_0.lua  andrei_nil3_0.lua  andrei_nil4_0.lua  andrei_nil4_0.tl  andrei_nil5_0.lua  andrei_nil5_0.tl  andrei_nil6_0.lua  andrei_nil6_0.tl  andrej0_cg.lua  andrej2_cg.tl  andrej4_cg.lua  krivka_gen0_0.tl  krivka_gen3_0.lua  (+82 more)
without_errors/buitin_func/: ifj21.tl  zdenek12_cg.lua  zdenek17_cg.tl  zdenek17_cg_0.lua  zdenek18_cg.lua  zdenek19_cg.lua  zdenek19_cg.tl  zdenek1_chr.lua  zdenek1_chr.tl  zdenek1_substr.lua  zdenek1_substr.tl  zdenek2_tointeger_0.lua  zdenek2_tointeger_0.tl
without_errors/if_else/: zdenek1_if_else_0.lua  zdenek1_if_else_0.tl  zdenek2_if_else_0.lua
without_errors/input/: andrei3_cg.lua  andrei3_cg.tl  andrei3_new_gen_0.lua  andrei3_new_gen_0.tl  andrej_5.tl  ifj21.tl  krivka_gen0_0.lua  krivka_gen2_0.lua
without_errors/new_errors/: 1_fixed.lua  1_fixed.tl  2.lua  2.tl  2_easier.lua  2_easier.tl  2_easier_0.lua  2_n_easier.tl  3.lua  3.tl  4_fixed.lua  4_fixed_0.tl  5.tl  5_fixed.lua  6.lua  6_0.tl  andrei1_write_0.lua  andrei1_write_0.tl  andrei2_write_0.tl  andrei4_write.lua  andrei6_write.tl  andrei7_write.tl  andrei7_write_0.lua  andrei7_write_0.tl  zdenek2_if_else.tl
without_errors/nil/: andrei3_nil.lua  andrei3_nil.tl  andrei_nil0_0.lua  andrei_nil1_0.lua  andrei_nil2_0.lua  andrei_nil6_0.lua  richard10_8.lua  richard11_8.lua  richard11_8.tl  richard12_8.lua  richard13_8.lua  richard14_8.lua  richard15_8.lua  richard15_8.tl  richard16_8.lua  richard17_8.lua  richard18_8.lua  richard19_8.lua  richard1_8.lua  richard20_8.lua  richard23_8.lua  richard24_8.lua  richard2_8.tl  richard3_8.lua  richard3_8.tl  richard4_8.lua  richard5_8.lua  richard6_8.lua  richard7_8.lua  richard7_8.tl  richard8_8.lua
without_errors/ondroid/: program1.lua  program2.lua  program3.lua  program4.lua
without_errors/while/: 2.lua  2.tl  2_n_easier.lua
without_errors/withou_errors_zero/: richard3_9.tl
without_errors/without_errors_input/: andrei_gen4_0.tl  andrej3_cg.tl  ifj21.lua
without_errors/without_errors_nil/: andrei_nil2_0.tl  andrei_nil5_0.tl  richard14_8.tl  richard16_8.tl  richard1_8.tl  richard20_8.tl  richard4_8.tl
without_errors/without_errors_write_value/: andrei0_cg.tl  krivka_gen3_0.tl  richard26_0.tl
without_errors/write_value/: andrei1_0.lua  andrei1_0.tl  andrei2_cg.lua  andrei5_new_gen_0.lua  andrei6_new_gen_0.lua  andrei_gen1_0.lua  andrej_0.lua  andrej_0.tl  andrej_1cg.lua  andrej_2.lua  andrej_2.tl  andrej_3.lua  andrej_3.tl  andrej_4.lua  andrej_4.tl  andrej_5.lua  krivka_gen3_0.tl  krivka_gen6_0.lua  krivka_gen8_0.lua  richard19_0.lua  richard19_0.tl  richard20_0.lua  richard21_0.lua  richard22_0.lua  richard22_0.tl  richard23_0.lua  richard23_0.tl  richard24_0.lua  richard25_0.lua  richard26_0.lua  richard29_0.lua  richard31_0.lua  richard32_0.lua  richard33_0.lua  richard_fun_expr_0.lua  zdenek10_cg.lua  zdenek15_cg.lua  zdenek16_cg.lua  zdenek4_cg.lua
without_errors/zero/: richard1_9.lua  richard2_9.lua  richard3_9.lua  richard4_9.lua  richard4_9.tl  richard5_9.lua  richard5_9.tl
without_errors_input/: andrei_gen4_0.lua  andrej3_cg.lua  krivka_gen1_0.lua  zdenek6_cg.tl
